# PyNiDE

./: LICENSE  PRIVACY-POLICY.md  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/com/pynide/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  image.cpp  lottie.cpp  pynide.cpp  pynide.h  pynide.hpp
app/src/main/java/androidx/recyclerview/widget/: ChildHelper.java  (+8 more)
app/src/main/java/com/pynide/: BuildVars.java  DispatchQueuePriority.java  IDEApp.kt  IDEApplication.kt  IDESettings.java  LaunchActivity.java  NativeLoader.java
app/src/main/java/com/termux/: BellHandler.java
app/src/main/java/rikka/preference/: IntegerSimpleMenuPreference.java
app/src/main/res/anim/: popup_context_in.xml  scale_in.xml  scale_out.xml  text_in.xml  text_out.xml  text_out_down.xml
app/src/main/res/drawable/: bar_selector_style.xml  ic_android.xml  ic_arrow_downward.xml  ic_bug_report.xml  ic_close.xml  ic_content_copy.xml  ic_font_download.xml  ic_format_paint.xml  ic_format_size.xml  ic_github.xml  ic_info.xml  ic_invert_colors.xml  ic_language.xml  ic_launcher_foreground.xml  ic_launcher_monochrome.xml  ic_license.xml  ic_link.xml  ic_logo.xml  ic_palette.xml  ic_paste.xml  ic_policy.xml  ic_restart_alt.xml  ic_settings.xml  ic_share.xml  ic_splash_logo.xml  ic_terminal.xml  ic_text_select_handle_right.xml  scrollbar_vertical_thumb.xml  scrollbar_vertical_thumb_inset.xml
app/src/main/res/layout/: activity_editor.xml  activity_launch.xml  activity_settings.xml  activity_terminal.xml  appbar_editor.xml  appbar_launch.xml  preference_category.xml
app/src/main/res/menu/: editor.xml  launch.xml  menu_launch.xml  terminal.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
app/src/main/res/values/: arrays.xml  bools.xml  colors.xml  dimens.xml  strings.xml  styles.xml  themes.xml  themes_overlay.xml  untranslatable_strings.xml
app/src/main/res/values-hi/: strings.xml
app/src/main/res/values-hi-rIN/: strings.xml
app/src/main/res/values-land/: bools.xml  dimens.xml
app/src/main/res/values-night/: colors.xml  themes.xml  themes_overlay.xml
app/src/main/res/values-v27/: themes.xml
app/src/main/res/values-v29/: themes.xml
app/src/main/res/values-v31/: themes.xml  themes_overlay.xml
app/src/main/res/xml/: settings.xml
app/src/test/java/com/pynide/: ExampleUnitTest.kt
floating-toolbar/: build.gradle.kts
floating-toolbar/src/main/res/anim/: ft_avd_toarrow_rectangle_1_animation.xml  ft_avd_toarrow_rectangle_2_animation.xml  ft_avd_toarrow_rectangle_2_pivot_0_animation.xml  ft_avd_toarrow_rectangle_2_pivot_animation.xml  ft_avd_toarrow_rectangle_3_animation.xml  ft_avd_toarrow_rectangle_3_pivot_0_animation.xml  ft_avd_toarrow_rectangle_3_pivot_animation.xml  ft_avd_toarrow_rectangle_4_animation.xml  ft_avd_toarrow_rectangle_6_animation.xml
floating-toolbar/src/main/res/drawable/: floating_popup_background.xml  ft_avd_toarrow_animation.xml  ft_avd_tooverflow_animation.xml  ic_ab_back.xml  ic_menu_moreoverflow.xml
floating-toolbar/src/main/res/layout/: floating_popup_close_overflow_button.xml  floating_popup_container.xml  floating_popup_menu_button.xml  floating_popup_open_overflow_button.xml  floating_popup_overflow_button.xml
floating-toolbar/src/main/res/values/: attrs.xml  dimens.xml  strings.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
terminal/: build.gradle.kts
terminal/src/main/: AndroidManifest.xml
terminal/src/main/java/com/termux/: BellHandler.java  SimpleTerminalSessionClient.java  SimpleTerminalViewClient.java
terminal/src/main/res/drawable/: ic_text_select_handle_left.xml
workflows/: android.yml
(+112 files in other folders)
